# linuxDeviceDriversTutorial

./: .gitignore  README.md
eciLinuxKernelCourse/: REAME.md  simpleKernelModule.c
eciLinuxKernelCourse/loadableKernelModuleWithCommandLineArgsAndExportedSymbol/module1/: Makefile  module1.c
eciLinuxKernelCourse/loadableKernelModuleWithCommandLineArgsAndExportedSymbol/module2/: Makefile  buildScript.sh  module2.c
eciLinuxKernelCourse/procFsExample/: Makefile  buildScript.sh  procfs.c
eciLinuxKernelCourse/simpleLoadableKernelModule/: Makefile  buildScript.sh  simpleKernelModule.c
scripts/buildScripts/: buildChapter3Example.sh
tutorials/: README.md
tutorials/chapter3/oreiilyBook/: Makefile  registerModuleExample.c
tutorials/chapter3/pomeranzBook/kernelModule/: Makefile  simpleCharDev.c
tutorials/chapter3/pomeranzBook/userspaceApps/: CMakeLists.txt  userSpaceApp1.cpp
